src/App.css
@import url('https://fonts.googleapis.com/css?family=Nunito:regular,600');

body.dark {
  --app-name-text-color: #FFF;
  --background-color: #0D1116;
  --primary-text-color: #FFF;
  --primary-hover-text-color: #b1b1b1;
  --secondary-text-color: #a2a7ad;
  --overlay-background-color: #7985958a;
  --language-dot-background-color: #424d5a;

  --dark-mode-background-color: #1c2026;
  --dark-mode-text-color: #F0C73D;

  --scrollbar-background-color: #1d2126;
  --scrollbar-accent-color: #6c6e71;

  /** Buttons **/
  --button-background-color: #1C2026 ;
  --button-text-color: #FFF ;

  /**Card **/
  --card-background-color: #0D1116;
  --card-header-text-color: #798595;
  --card-header-background-color: #1C2026;
  --card-border-color: #1F2429;
  --card-content-divider:#1F2429;
  --card-background-focus-color: #181c21;

  /*Tag*/
  --tag-background-color: #1C2026;
  --tag-border-color: #1F2429;
  --tag-text-color: #FFFFFF;
  --tag-secondary-color: #4d535a;
  --tag-input-background: #FFF;

  /*Card Action button*/
  --card-actions-background-shadow: #1C2026;
  --card-action-button-background: #798595;
  --card-action-button-color: #FFF;
  --card-active-action-button-background: #FFF;
  --card-active-action-button-color: #798595;
}

body.light {
  --app-name-text-color: #253B53;
  --background-color: #EFF6FE;
  --primary-text-color: #2d3b4a;
  --secondary-text-color: #656D76;
  --overlay-background-color: #0000005c;
  --primary-hover-text-color: #495a6b;
  --language-dot-background-color: #cfddec;

  --scrollbar-background-color: #eff6ff;
  --scrollbar-accent-color: #b9cadc;

  --dark-mode-background-color: #243b53;
  --dark-mode-text-color: #F0C73D;

  --button-background-color: #d2deeb ;
  --button-text-color: #3C5065;

  /**Card **/
  --card-background-color: #FFFFFF;
  --card-header-text-color: #3C5065;
  --card-header-background-color: #F9FAFE;
  --card-border-color: #007eff1f;
  --card-content-divider:#e9ebec;
  --card-background-focus-color: #f5f8fb;

  /*Card Action button*/
  --card-actions-background-shadow: #edf5ff;
  --card-action-button-background: #d2deeb;
  --card-action-button-color: #3C5065;
  --card-active-action-button-background: #253B53;
  --card-active-action-button-color: #FFF;

  /*Tag*/
  --tag-background-color: #243B53;
  --tag-border-color: #e9ebec;
  --tag-text-color: #FFFFFF;
  --tag-secondary-color: #e9ebec;
  --tag-input-background: #243B53;
}

html, body {
  background: var(--background-color); 
  color: var(--primary-text-color);
  transition: background-color 0.3s ease-in-out;   
  font-family: "nunito";
  font-size: 100%;
}

.appLoading {
  justify-content: center;
  align-items: center;
  height: 100vh;
  display: flex;
}

a {

  color: var(--primary-text-color);
}
.App {
  flex-direction: row;
  color: var(--primary-text-color);
  padding: 1%;
  display: flex;
  flex-direction: column;
  transition: background-color 0.3s ease-in-out;
}
.errorMsg {
  text-align: center;
  margin: auto;
  font-size: 16px;
  padding: 16px;
}

.ghostCard{
  opacity: 0.3;
}
.cardLoading{
  display: flex;
  justify-content: center;
  min-height: 240px;
  align-items: center;
}
.loadingIcon {
  color: var(--app-name-text-color)
}
.AppHeader {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
  height:86px;
  margin-bottom: 12px;
}

.AppFooter {
  flex: 0 0 auto;
  flex-direction: row;
  text-align: right;
  margin-top: 12px;
}
.AppFooter .linkItem {
  font-size: 12px;
  color: var(--primary-text-color);
  text-decoration: none;
  text-transform: uppercase;
  margin-right: 12px;
  cursor: pointer;
  display: inline-flex;
  vertical-align: middle
}
.linkItemIcon {
  margin-right: 4px;
}
.linkItem :hover {
  color: var(--primary-hover-text-color);
}

.AppContent {
  flex: 1 1 auto;
}
.extras {

  flex-direction: row;
  margin-left: auto;
  margin-right: 16px;
  align-content: center;

  transition: width, left, right, 0.3s;
}
.darkModeBtn {
  background-color: var(--dark-mode-background-color) !important;
  color: var(--dark-mode-text-color) !important;
}
.extraBtn {
  background-color: var(--button-background-color);
  color: var(--button-text-color);
  margin-left: 8px;
  height:40px;
  width: 40px;
  line-height: 44px;
  font-size: 18px;
  text-align: center;
  border: 0;
  border-radius: 20px;
  outline: none;
  cursor: pointer;
  position: relative;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}
.extraTextBtn {
  padding: 0 16px;
  width: auto;
  min-width: 40px;
  font-weight: bold;
}
.extraTextBtnIcon {
  margin-right: 4px;
  transition: color 400ms,transform .1s;
}
.extraTextBtn:hover .extraTextBtnIcon {
  color: red;
  transform: scale(1.2);
}

.badgeCount {
  width: 20px;
  height: 20px;
  background: #ef0808;
  border-radius: 100px;
  font-size: 13px;
  font-weight: 500;
  display: block;
  line-height: 20px;
  color: white;
  position: absolute;
  right: -4px;
  bottom: -6px;
}

.AppName{
  color: var(--app-name-text-color);
  text-align: left;
}

.logo {
  position: relative;
  top: 4px;
  margin-right: 4px;
  font-size: 24px;
}
.logoText {
  height: 16px;
  width: auto;
  fill: var(--app-name-text-color)
}
.cards {
  display:flex;
  align-items: flex-start;
  flex-direction: row;
  flex-wrap: wrap;

}

.block {
  background-color: var(--card-background-color);
  border-radius: 10px;
  overflow: hidden;
  flex-direction: column;
  height: 80vh;
}
.blockContent {
  flex-grow: 1;
  overflow-y: auto;
  scrollbar-color: var(--scrollbar-accent-color) var(--scrollbar-background-color);
  scrollbar-width: thin;
  height: calc(80vh - 1% - 16px - 30px);
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}


.blockContent::-webkit-scrollbar {
  width: 6px;
}

.blockContent::-webkit-scrollbar-track-piece  {
  background-color: var(--scrollbar-background-color);
}

.blockContent::-webkit-scrollbar-thumb:vertical {
  border-radius: 6px;
  background-color: var(--scrollbar-accent-color);
}
/* ... */

